Bug 56983 - EDITING: CRASH when copy / paste cell in particular .ods imported from Excel
Summary: EDITING: CRASH when copy / paste cell in particular .ods imported from Excel
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.3.1 rc
Hardware: Other All
: medium normal
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.4
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-11-11 15:26 UTC by VLB
Modified: 2012-11-13 09:10 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
file crashe (deleted)
2012-11-11 21:50 UTC, VLB
Details
bt with symbols + console logs (7.88 KB, text/plain)
2012-11-11 22:18 UTC, Julien Nabet
Details
orginal sheet use for sheet file crase (deleted)
2012-11-12 07:19 UTC, VLB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description VLB 2012-11-11 15:26:32 UTC
I use windows 7 64 bits and Version 3.6.4.0+ (Build ID: 08ca08d)

I have a private sheet, when i copy a cel to a other sheet LO crashed.
It is only with one cel and i don't know what it is.
The sheet is used for business and can make public.
Comment 1 Julien Nabet 2012-11-11 20:25:33 UTC
On pc Debian x86-64 with 3.6 sources updated today, I don't reproduce this.
Do you reproduce this with a brand new file?
Could you attach the file where you've got the problem?
Comment 2 VLB 2012-11-11 21:50:52 UTC
Created attachment 69916 [details]
file crashe
Comment 3 VLB 2012-11-11 21:55:00 UTC
I hope the file can delete when the issue is solved!

LO crashes:
1) copy cel "Hout_Hout art_ 8_2_2" U16 to cel "St__Hout art_ 8_2_3" W16.

2) delete cel A1
Comment 4 VLB 2012-11-11 21:57:02 UTC
(In reply to comment #1)
> On pc Debian x86-64 with 3.6 sources updated today, I don't reproduce this.
> Do you reproduce this with a brand new file?
> Could you attach the file where you've got the problem?

I didn't have the problem in a new file and is related to the attach file.
Comment 5 Julien Nabet 2012-11-11 22:18:04 UTC
Created attachment 69918 [details]
bt with symbols + console logs

On pc Debian x86-64 with master sources updated today, I reproduced this behaviour (brand new LO profile too).
Comment 6 Julien Nabet 2012-11-11 22:19:52 UTC
vlb: thank you for your feedback. I don't know how to remove a file from bugtracker. I'm not sure it's possible to do it.

Rainer: is it possible to remove a file attached? (or to ask to an admin to do it? If yes who?)

Markus: one for you?
Comment 7 Julien Nabet 2012-11-11 22:21:36 UTC
Just forgot to tell I've got the crash at step 1) when I copy cell, not at step 2) deletion
Comment 8 Markus Mohrhard 2012-11-12 05:48:16 UTC
One for me.
Comment 9 Markus Mohrhard 2012-11-12 06:00:10 UTC
Ok, so the problem is already int he file.

When the file has been transformed from Excel to ODF it lost the conditional format ranges.

@vlb: Do you have the original Excel file to see what the issue is? I'll add a check for the conditional format problem. But the conditional format can't be rescued in this file as the target range is empty.
Comment 10 Not Assigned 2012-11-12 06:27:11 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=eb240530443b964ea45bf80a5e3711e11a3f09c5

remove conditional formats withiout range after import, related fdo#56983



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Rainer Bielefeld Retired 2012-11-12 06:50:19 UTC
I did some tests (but was too slow for Markus):
[Reproducible] with "LibreOffice 3.6.3.2" German UI/ German Locale [Build-ID: 58f22d5] on German WIN7 Home Premium (64bit)

Also crashes copy / paste St__Hout art_ 8_2_3.G7 to St__Hout art_ 8_2_3.N20 and many (all?) other copy  / paste in this sheet and sheet Hout_Hout art_ 8_2_2

Was already [Reproducible] with Server Installation of  "LibreOffice 3.6.3.0+  English UI/ German Locale [Build-ID: 1e73405],{tinderbox: Win-x86@9 pull time 2012-10-05 15:31:15}  on German WIN7 Home Premium (64bit)  

Still  [Reproducible] with parallel installation of Master "LOdev  3.7.0.0.alpha0+   -  ENGLISH UI / German Locale  [Build ID: 70ec82)]"  {tinderbox: @16, pull time 2012-11-09 00:53:19} on German WIN7 Home Premium (64bit) with separate User Profile for Master Branch 

Was ok with 
- Server Installation of "LibreOffice 3.6.2.2 release”  German UI/ German 
  Locale [Build-ID:  da8c1e6]
- 3.5.7.2
so regression!

Please also see "Bug 57003 - EDITING: CRASH when 'delete - contents - comments' in particular .ods", can you please try to reproduce my results?

(In reply to comment #6)
If you want to delete an attachment simply open a Bug for Product "freedesktop.org", Component "Bugzilla" and ask for deletion of "Attachment number" in "Bug Number" with a brief reasoning.

Before you do so please run a query with the attachment number in comment like <https://bugs.freedesktop.org/buglist.cgi?list_id=162738&query_format=advanced&longdesc=attachment%2069904&longdesc_type=allwordssubstr> to check whether the attachment also is used in other bugs and ask there whether deletion might cause problems.

(Bug 40515 shows why I am not happy with crash reports as comments instead or attached text documents)
Comment 12 VLB 2012-11-12 07:16:36 UTC
(In reply to comment #9)
> Ok, so the problem is already int he file.
> 
> When the file has been transformed from Excel to ODF it lost the conditional
> format ranges.
> 
> @vlb: Do you have the original Excel file to see what the issue is? I'll add
> a check for the conditional format problem. But the conditional format can't
> be rescued in this file as the target range is empty.

I have attach the xls file, what i think i have used orginal.
Comment 13 VLB 2012-11-12 07:19:55 UTC
Created attachment 69931 [details]
orginal sheet use for sheet file crase
Comment 14 VLB 2012-11-12 08:20:14 UTC
 
> (In reply to comment #6)
> If you want to delete an attachment simply open a Bug for Product
> "freedesktop.org", Component "Bugzilla" and ask for deletion of "Attachment
> number" in "Bug Number" with a brief reasoning.
> 
Do i have made a new bug in bugs.freedesktop.org and ask as comment?
Comment 15 Rainer Bielefeld Retired 2012-11-12 09:46:12 UTC
(In reply to comment #10)
BTW something completely different:

@Markus:
I think you should proceed 
<http://wiki.documentfoundation.org/QA/Todo_rename_3.7_to_4.0#ToDos> item 9 as soon as possible.
Comment 16 Tollef Fog Heen 2012-11-12 12:39:47 UTC
The content of attachment 69931 [details] has been deleted by
    Tollef Fog Heen <tfheen@err.no>
who provided the following reason:

contains private data

The token used to delete this attachment was generated at 2012-11-12 12:39:44 UTC.
Comment 17 Tollef Fog Heen 2012-11-12 12:40:00 UTC
The content of attachment 69916 [details] has been deleted by
    Tollef Fog Heen <tfheen@err.no>
who provided the following reason:

contains private data

The token used to delete this attachment was generated at 2012-11-12 12:39:57 UTC.
Comment 18 Markus Mohrhard 2012-11-13 06:15:34 UTC
I'm not sure if we should mark bugs produced by invalid documents as regression.

But well it is fixed so I don't care. The title was misleading. The file was an ODF file that somehow got an invalid conditional format range. The first test document already was invalid according to the ODF extension.

The Excel file did not include any conditional formats so I have no idea how this file has been produced. Maybe it was created between Beta2 and Beta3 when we had exactly this bug.
Comment 19 Not Assigned 2012-11-13 09:10:52 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d5581278e8e2c68cfcef8d0e610efdbb1f793b34&g=libreoffice-3-6

remove conditional formats withiout range after import, related fdo#56983


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.